2021-11-29 update the interface for channel operation
