# models/serviceInfo.go
@@ -1,28 +1,35 @@
 package models
 
 type User struct {
-	UserName string `json:"user_name,omitempty"`
-	Secret   string `json:"secret,omitempty"`
-	UserType string `json:"user_type,omitempty"`
-	OrgName  string `json:"org_name,omitempty"`
-	CaName   string `json:"ca_name,omitempty"`
+	UserName string `json:"user_name" validate:"required,gt=0"`
+	Secret   string `json:"secret" validate:"required,gt=0"`
+	UserType string `json:"user_type" validate:"required,gt=0"`
+	OrgName  string `json:"org_name" validate:"required,gt=0"`
+	CaName   string `json:"ca_name" validate:"required,gt=0"`
 }
 
 type ResponseBean struct {
-	Code int         `json:"code,omitempty"`
-	Msg  string      `json:"msg,omitempty"`
-	Data interface{} `json:"data,omitempty"`
+	Code int         `json:"code" validate:"required,gt=0"`
+	Msg  string      `json:"msg" validate:"required,gt=0"`
+	Data interface{} `json:"data" validate:"required,gt=0"`
 }
 
 type UserData struct {
-	PriFile string `json:"pri_file"`
-	PubFile string `json:"pub_file"`
+	PriFile string `json:"pri_file" validate:"required,gt=0"`
+	PubFile string `json:"pub_file" validate:"required,gt=0"`
 }
 
 type CreateChannelInfo struct {
-	Org       string `json:"org,omitempty"`
-	UserName  string `json:"user_name,omitempty"`
-	ChannelId string `json:"channel_id,omitempty"`
+	Org       string `json:"org" validate:"required,gt=0"`
+	UserName  string `json:"user_name" validate:"required,gt=0"`
+	ChannelId string `json:"channel_id" validate:"required,gt=0"`
+	Orderer string `json:"orderer" validate:"required,gt=0"`
+}
+
+type JoinChannelInfo struct {
+	Org       string `json:"org" validate:"required,gt=0"`
+	UserName  string `json:"user_name" validate:"required,gt=0"`
+	ChannelId string `json:"channel_id" validate:"required,gt=0"`
 }
 
 type CcInfo struct {
